--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Stripe Connector for Adobe Commerce Breeze Frontend Integration",
     "type": "magento2-module",
     "version": "1.1.4",
-    "license": "OSL-3.0",
+    "license": "MIT",
     "require": {
         "swissup/module-breeze": "^2.17.1"
     },
